# QuantumLab

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  api.py
core/: __init__.py  config.py  exceptions.py  models.py
physics/: __init__.py  harmonic_oscillator.py  hydrogen_solver.py  orbitals.py  validation.py  wavefunctions.py
quantum/: __init__.py  circuits.py  grover.py  hydrogen_register.py  vqe.py
services/: __init__.py  physics_service.py  quantum_service.py
tests/: conftest.py  test_api.py  test_determinism.py  test_physics.py  test_services.py
ui/: __init__.py  cli.py  web_interface.py
visualization/: __init__.py  bloch_sphere.py  orbital_renderer.py  probability_cloud.py  viewer_3d.py
