[project]
name = "quantumlab"
version = "2.0.0"
description = "Integrated Quantum Simulation Lab"
authors = [{name = "Antigravity/ad4m"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "pyvista>=0.43.0",
    "plotly>=5.18.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --maxfail=2"
